--- a/code/public/index.html
+++ b/code/public/index.html
@@ -22,9 +22,9 @@
             min-height: 100vh;
         }
     </style>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css" />
-    <script src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.js"></script>
-    <script src="https://unpkg.com/mermaid/dist/mermaid.min.js"></script>
+    <link rel="stylesheet" href="./third-plugin/katex.min.css" />
+    <script src="./third-plugin/katex.min.js"></script>
+    <script src="./third-plugin/mermaid.min.js"></script>
 </head>
 
 <body>
