--- a/code/public/index.html
+++ b/code/public/index.html
@@ -2,38 +2,39 @@
 <html lang="">
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-    <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
-    <link rel="icon" href="<%= BASE_URL %>logo.ico">
-    <title>
-        sunny586的个人博客
-    </title>
-    <meta name="description" content="sunny586个人博客,记录工作学习中遇到的代码问题">
-    <meta name="keywords" content="sunny586,blog,编程,博客">
-    <meta name="author" content="sunny586">
-    <style type="text/css">
-        body {
-            padding: 0;
-            margin: 0;
-            outline: 0;
-            border: 0;
-            min-height: 100vh;
-        }
-    </style>
-    <link rel="stylesheet" href="./static/katex.min.css" />
-    <script src="./static/katex.min.js"></script>
-    <script src="./static/mermaid.min.js"></script>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport"
+    content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
+  <link rel="icon" href="<%= BASE_URL %>logo.ico">
+  <title>
+    sunny586的个人博客
+  </title>
+  <meta name="description" content="sunny586个人博客,记录工作学习中遇到的代码问题">
+  <meta name="keywords" content="sunny586,blog,编程,博客">
+  <meta name="author" content="sunny586">
+  <style type="text/css">
+    body {
+      padding: 0;
+      margin: 0;
+      outline: 0;
+      border: 0;
+      min-height: 100vh;
+    }
+  </style>
+  <link rel="stylesheet" href="./static/katex.min.css" />
+  <script src="./static/katex.min.js"></script>
+  <script src="./static/mermaid.min.js"></script>
 </head>
 
 <body>
-    <noscript>
+  <noscript>
     <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
         Please enable it to continue.</strong>
   </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
 </body>
 
 </html>
