--- a/code/public/index.html
+++ b/code/public/index.html
@@ -9,7 +9,7 @@
   <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
   <link rel="icon" href="<%= BASE_URL %>logo.ico">
   <title>
-    sunny586的个人博客333
+    sunny586的个人博客
   </title>
   <meta name="description" content="sunny586个人博客,记录工作学习中遇到的代码问题">
   <meta name="keywords" content="sunny586,blog,编程,博客">
